--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,13 @@ body {
     background: lightcyan;
 }
 
-ul {
+ul li {
     display: inline;
+}
+
+.crystal-image { 
+    border: 3px solid CornflowerBlue;
+    margin: 1.5em;
+    padding: 0.75em;
+    border-radius: 0.5em;
 }
