Correct img alt; adjust style; display wins and losses on reset

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+div {
+    padding: 1em;
+}
+
 .container {
     border: 1px solid black;
 }
@@ -28,3 +32,4 @@ ul li {
     padding: 0.75em;
     border-radius: 0.5em;
 }
+
